tests/errors/test_15.xpp
// Duplicate extern declaration

extern exit() void;
extern exit(i64) void;
extern exit(i64) void;

fn main() void {}